...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/bananaButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:text="@string/banana_button_label" />
</LinearLayout>
