...
    tools:context=".test_espresso.IntroductionActivity">

    <ImageView
        android:id="@+id/starImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/buttonContinue"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        app:srcCompat="@drawable/star" />

...
