...
    <string name="place_text_label">LUGARES</string>
    <string name="theory_text_label">TEORÍAS</string>
    <string name="advice_text_label">CONSEJOS</string>
    <string name="challenge_text_label">DESAFÍOS</string>
    <string name="shop_text_label">TIENDA</string>
    <string name="support_text_label">APOYO</string>
    <string name="button_continue_label">CONTINUAR</string>
    <string name="menu_label">MENÚ</string>
    <string name="search_button_label">BUSCAR</string>
    <string name="banana_button_label" />
    <string name="weapon_bar_label">ARMAS</string>
    <string name="advice_bar_label">CONSEJOS</string>
    <string name="support_bar_label">APOYO</string>
...
